[package]

name = "transit"
version = "0.0.1"
authors = [
  "Andrew Hobden <andrew@hoverbear.org>",
  "Brody Holden <brody.holden.r@gmail.com>",
  "Fraser D <fmd@uvic.ca>",
]
# Crates.io dependencies
[dependencies]
rustc-serialize = "*" 

# github based dependencies (Because Crates.io isn't always up to date)
[dependencies.git2]
git = "https://github.com/alexcrichton/git2-rs"
[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs"
