[package]

name = "transit"
version = "0.0.1"
authors = [
  "Andrew Hobden <andrew@hoverbear.org>",
  "Brody Holden <brody.holden.r@gmail.com>",
  "Fraser D <fmd@uvic.ca>",
]

[dependencies]
rustc-serialize = "*"
docopt = "*"
git2 = "*"
regex = "*"
regex_macros = "*"

[dependencies.iron]
git = "https://github.com/iron/iron.git"

[dependencies.mount]
git = "https://github.com/iron/mount.git"
