[package]

name = "transit"
version = "0.0.1"
authors = [
  "Andrew Hobden <andrew@hoverbear.org>",
  "Brody Holden <brody.holden.r@gmail.com>",
  "Fraser D <fmd@uvic.ca>",
]

[features]
default = [ "hyper/nightly", ]

[dependencies]
rustc-serialize = "*"
docopt = "*"
git2 = "*"
regex = "*"
regex_macros = "*"
mount = "*"
iron = "*"

[dependencies.hyper]
version = "*"

[dependencies.static]
git = "https://github.com/iron/static.git"
